# quizzie-TFG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: devops.yml  docs.yml  feature_request.yml  test.yml
.github/workflows/: ci.yml
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  seed.py
backend/models/: __init__.py  content.py  quizzes.py  rooms.py  stage.py  users.py
backend/routers/: content.py  quizzes.py  rooms.py  stage.py  users.py
backend/schemas/: content.py  quizzes.py  users.py
docs/: calidad_del_código.md  casos_de_uso.md  especificación_ci_cd.md  estrategia_testing.md  modelo_de_datos.md  requisitos.md  sobre_la_memoria.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/auth/: Login.css  Login.tsx  LogoutModal.tsx  Modal.css  authService.ts
frontend/src/context/: RoomContext.tsx  ToastContext.tsx
frontend/src/forms/: CreateQuiz.css  CreateQuiz.tsx  ListQuizzes.css  ListQuizzes.tsx  LiveRoom.css  LiveRoom.tsx  Lobby.css  Lobby.tsx  NewNickname.tsx  NicknameEntry.css  NicknameEntry.tsx  QuestionResults.css  RoomCode.css  RoomCode.tsx  SetupRoom.css  SetupRoom.tsx
frontend/src/hooks/: useRoomSync.tsx
frontend/src/layouts/: Sidebar.tsx  Toast.css  ToastContainer.tsx
frontend/src/management/: CreateQuiz.css  CreateQuiz.tsx  DeleteQuizModal.tsx  EditQuiz.tsx  ListQuizzes.css  ListQuizzes.tsx  SetupRoom.css  SetupRoom.tsx
frontend/src/room-access/: NewNickname.css  NewNickname.tsx  NicknameEntry.css  NicknameEntry.tsx  RoomCode.css  RoomCode.tsx
frontend/src/room-play/: AnsweringPhase.css  AnsweringPhase.tsx  FinalScreen.css  FinalScreen.tsx  LeaderboardPhase.css  LeaderboardPhase.tsx  LiveRoom.css  LiveRoom.tsx  Lobby.css  Lobby.tsx  ResultsPhase.css  ResultsPhase.tsx  ScannerModal.tsx
tests/: conftest.py  test_integration_answer.py  test_integration_content.py  test_integration_group.py  test_integration_option.py  test_integration_participant.py  test_integration_question.py  test_integration_quiz.py  test_integration_room.py  test_integration_stage.py  test_integration_student.py  test_integration_teacher.py  test_integration_users.py  test_unit_content.py  test_unit_stage.py  test_unit_users.py
thesis/: memoria.tex
thesis/etc/: style.tex
thesis/sections/: 00_abstract.tex  00_agradecimientos.tex  00_portada.tex  00_resumen.tex  01_Introduccion.tex  02_Acta_de_constitucion.tex  02_Gestion.tex  03_Gestion_del_proyecto.tex  04_Diseño.tex  04_Estado_del_arte_y_fundamentacion.tex  05_Analisis_de_requisitos.tex  05_Implementacion.tex  06_Diseño_y_arquitectura.tex  06_Pruebas.tex  07_Metodologia_de_desarrollo.tex  08_Implementacion_y_pruebas.tex  09_Resultados_y_evaluacion.tex  10_Conclusiones.tex  XX_Conclusiones.tex
