[project]
name = "quizzie-tfg"
version = "0.1.0"
description = "Proyecto para mi TFG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]

[tool.commitizen]
name = "cz_customize" 
version = "0.0.0"     
tag_format = "v$version"
version_files = [
    "frontend/package.json:version"
]

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{subject}}{% if body %}\n\n{{body}}{% endif %}{% if is_breaking_change %}\n\nBREAKING CHANGE: {{footer}}{% elif footer %}\n\n{{footer}}{% endif %}"
example = "feat(ui): add responsive layout"
schema = "<type>(<scope>): <subject>"

bump_pattern = "^(BREAKING CHANGE|feat|fix)"
bump_map = {"BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH"}

questions = [
    { type = "list", name = "change_type", message = "Select the type of change you are committing", choices = [
        {value = "feat", name = "feat:     A new feature (MINOR)"},
        {value = "fix", name = "fix:      A bug fix (PATCH)"},
        {value = "docs", name = "docs:     Documentation only changes"},
        {value = "style", name = "style:    Changes that do not affect the meaning of the code"},
        {value = "refactor", name = "refactor:  A code change that neither fixes a bug nor adds a feature"},
        {value = "perf", name = "perf:      A code change that improves performance"},
        {value = "test", name = "test:      Adding missing or correcting existing tests"},
        {value = "build", name = "build:    Changes that affect the build system or external dependencies"},
        {value = "ci", name = "ci:        Changes to CI configuration files and scripts"},
        {value = "chore", name = "chore:     Other changes that don't modify src or test files"},
        {value = "revert", name = "revert:    Reverts a previous commit"}
    ]},
    { type = "input", name = "scope", message = "Scope (optional):" },
    { type = "input", name = "subject", message = "Subject (short description):" },
    { type = "input", name = "body", message = "Body (long description, optional):" },
    { type = "confirm", name = "is_breaking_change", message = "Is this a BREAKING CHANGE?", default=false },
    { type = "input", name = "footer", message = "Footer (e.g., Closes #12):" }
]

[dependency-groups]
dev = [
    "commitizen>=4.13.7",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
src = ["backend"] 
line-length = 100
target-version = "py312"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"] 
ignore = [] # Aquí puedes poner reglas específicas que quieras saltarte
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"